refactor: added x-api-key in swagger
